backend, frontend: use cookies for admin site authentication
