# backend/src/api.rs
@@ -2,6 +2,7 @@ pub mod admin;
 pub mod map;
 pub mod root;
 
+use axum_extra::extract::cookie::CookieJar;
 use std::{sync::Arc, time::Duration};
 
 use crate::{
@@ -151,6 +152,21 @@ where
     }
 }
 
+pub struct AppJsonWCookies<T> {
+    pub body: T,
+    pub jar: CookieJar,
+}
+
+impl<T> IntoResponse for AppJsonWCookies<T>
+where
+    axum::Json<T>: IntoResponse,
+{
+    fn into_response(self) -> Response {
+        println!("{:?}", self.jar);
+        (self.jar, axum::Json(self.body)).into_response()
+    }
+}
+
 #[derive(ToSchema, Serialize)]
 pub struct ErrorResponse {
     error_code: String,
@@ -246,14 +262,20 @@ where
     async fn from_request_parts(parts: &mut Parts, state: &S) -> Result<Self, Self::Rejection> {
         let app_state = AppState::from_ref(state);
 
-        // Extract the token from the authorization header
-        let TypedHeader(Authorization(bearer)) = parts
-            .extract::<TypedHeader<Authorization<Bearer>>>()
+        // Extract the token from the cookie jar
+        let cookies = parts
+            .extract::<CookieJar>()
             .await
             .map_err(|_| AppError::TokenValidation)?;
 
+        let token = cookies
+            .get("token")
+            .ok_or(AppError::TokenValidation)?
+            .value()
+            .to_string();
+
         let token_data = jsonwebtoken::decode::<AdminUserTokenClaims>(
-            bearer.token(),
+            &token,
             &jsonwebtoken::DecodingKey::from_secret(app_state.config.token_secret.as_ref()),
             &jsonwebtoken::Validation::default(),
         )
